[package]
name = "csvtosqlite"
version = "0.1.6"
edition = "2021"
description = "Imports CSV data into an SQLite database"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]
license = "MIT"
repository = "https://github.com/mustakimali/csvtosqlite/"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
itertools = "0.13.0"
num-format = "0.4.4"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.3", features = ["full"] }

[profile.release]
opt-level = 3
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize optimization by reducing parallelism
debug = false     # Disable debug information generation
rpath = false     # Disable rpath (can slightly reduce the binary size)
panic = 'abort'   # Use abort on panic (reduces binary size)
strip = true      # Strip symbols from the binary
